@@ -5,6 +5,7 @@ from hyperon_das_atomdb.utils.expression_hasher import ExpressionHasher as hashe
 
 from hyperon_das import DistributedAtomSpace
 from hyperon_das.cache import (
+    CustomQuery,
     LocalGetLinks,
     LocalIncomingLinks,
     RemoteGetLinks,
@@ -178,9 +179,7 @@ class TestGetLinks:
         self._check_asserts(das, iterator)
         _db_down()
 
-    @pytest.mark.skip(
-        reason="The load with MeTTa parse is not creating the template keys correctly"
-    )
+    @pytest.mark.skip(reason="Disabled. See: das-query-engine#197")
     def test_get_links_with_remote_das(self, _cleanup):
         das = DistributedAtomSpace(
             query_engine='remote', host=remote_das_host, port=remote_das_port
@@ -336,3 +335,123 @@ class TestTraverseNeighbors:
         traverse = das.get_traversal_cursor(human_handle)
         iterator = traverse.get_neighbors(filter=self._is_literal_atom)
         self._check_asserts(das, iterator)
+
+
+class TestCustomQuery:
+    @pytest.fixture(scope="session")
+    def _cleanup(self, request):
+        return cleanup(request)
+
+    def _all_nodes(self):
+        return sorted(
+            [
+                metta_animal_base_handles.human,
+                metta_animal_base_handles.monkey,
+                metta_animal_base_handles.chimp,
+                metta_animal_base_handles.mammal,
+                metta_animal_base_handles.animal,
+                metta_animal_base_handles.reptile,
+                metta_animal_base_handles.snake,
+                metta_animal_base_handles.dinosaur,
+                metta_animal_base_handles.earthworm,
+                metta_animal_base_handles.rhino,
+                metta_animal_base_handles.plant,
+                metta_animal_base_handles.vine,
+                metta_animal_base_handles.ent,
+                metta_animal_base_handles.triceratops,
+            ]
+        )
+
+    def _all_links(self):
+        return sorted(
+            [
+                metta_animal_base_handles.similarity_human_monkey,
+                metta_animal_base_handles.similarity_human_chimp,
+                metta_animal_base_handles.similarity_chimp_monkey,
+                metta_animal_base_handles.similarity_snake_earthworm,
+                metta_animal_base_handles.similarity_rhino_triceratops,
+                metta_animal_base_handles.similarity_snake_vine,
+                metta_animal_base_handles.similarity_human_ent,
+                metta_animal_base_handles.inheritance_human_mammal,
+                metta_animal_base_handles.inheritance_monkey_mammal,
+                metta_animal_base_handles.inheritance_chimp_mammal,
+                metta_animal_base_handles.inheritance_mammal_animal,
+                metta_animal_base_handles.inheritance_reptile_animal,
+                metta_animal_base_handles.inheritance_snake_reptile,
+                metta_animal_base_handles.inheritance_dinosaur_reptile,
+                metta_animal_base_handles.inheritance_triceratops_dinosaur,
+                metta_animal_base_handles.inheritance_earthworm_animal,
+                metta_animal_base_handles.inheritance_rhino_mammal,
+                metta_animal_base_handles.inheritance_vine_plant,
+                metta_animal_base_handles.inheritance_ent_plant,
+                metta_animal_base_handles.similarity_monkey_human,
+                metta_animal_base_handles.similarity_chimp_human,
+                metta_animal_base_handles.similarity_monkey_chimp,
+                metta_animal_base_handles.similarity_earthworm_snake,
+                metta_animal_base_handles.similarity_triceratops_rhino,
+                metta_animal_base_handles.similarity_vine_snake,
+                metta_animal_base_handles.similarity_ent_human,
+            ]
+        )
+
+    def _asserts(self, das: DistributedAtomSpace):
+        node_index = das.create_field_index(atom_type='node', field='is_literal', type='Symbol')
+        link_index_type = das.create_field_index(
+            atom_type='link', field='is_toplevel', type='Expression'
+        )
+        link_index_composite_type = das.create_field_index(
+            atom_type='link',
+            field='is_toplevel',
+            composite_type=['Expression', 'Symbol', 'Symbol', 'Symbol'],
+        )
+
+        node_iterator = das.custom_query(node_index, is_literal=True)
+        link_iterator_type = das.custom_query(link_index_type, is_toplevel=True, chunk_size=10)
+        link_iterator_composite_type = das.custom_query(
+            link_index_composite_type, is_toplevel=True, chunk_size=5
+        )
+
+        nodes = self._check_asserts(das, node_iterator)
+        links_type = self._check_asserts(das, link_iterator_type)
+        links_composite_type = self._check_asserts(das, link_iterator_composite_type)
+
+        assert nodes == self._all_nodes()
+        assert links_type == self._all_links()
+        assert links_composite_type == self._all_links()
+
+    def _check_asserts(self, das: DistributedAtomSpace, iterator: CustomQuery):
+        current_value = iterator.get()
+        assert current_value == das.get_atom(iterator.get()['handle'])
+        assert isinstance(current_value, dict)
+        assert iterator.is_empty() is False
+        handles = sorted([item['handle'] for item in iterator])
+        assert iterator.is_empty() is True
+        with pytest.raises(StopIteration):
+            iterator.get()
+        with pytest.raises(StopIteration):
+            next(iterator)
+        return handles
+
+    def test_custom_query_with_local_das_redis_mongo(self, _cleanup):
+        _db_up()
+        das = DistributedAtomSpace(
+            query_engine='local',
+            atomdb='redis_mongo',
+            mongo_port=mongo_port,
+            mongo_username='dbadmin',
+            mongo_password='dassecret',
+            redis_port=redis_port,
+            redis_cluster=False,
+            redis_ssl=False,
+        )
+        load_metta_animals_base(das)
+        das.commit_changes()
+        self._asserts(das)
+        _db_down()
+
+    @pytest.mark.skip(reason="Not implemented in Server yet")
+    def test_custom_query_with_remote_das(self):
+        das = DistributedAtomSpace(
+            query_engine='remote', host=remote_das_host, port=remote_das_port
+        )
+        self._asserts(das)
