@@ -2,3 +2,4 @@
 [#136] Implement methods in the DAS API to create indexes in the database
 [#BUGFIX] Fix Mock in unit tests
 [#90] OpenFaas is not serializing/deserializing query answers
+[#190] Implement custom_query() method in DAS API
